--- a/ClaseImg/index.html
+++ b/ClaseImg/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="nav-Secciones">
                 <ul>
-                    <li>Inicio</li>
+                    <li>klk</li>
                     <li>Nosotros</li>
                     <li>Contactos</li>
                     <li>Servicios</li>
